feat: unify submit flow and add configurable auto-submit
Fix submit flow inconsistency and unify auto-resolve behavior

Changes:
- Fix: All submissions now use complete shelve + p4push workflow
- Fix: Unified auto-resolve and manual rescan behavior
- Feature: Add auto_resolve.auto_submit config (default: true)
- Remove: Deprecated admin_submit method and routes

Details:
- Modified jobs.py: Add auto_submit config, remove admin_submit()
- Modified server.py: Remove /api/jobs/<id>/submit routes
- Modified job_detail.html: Use continue_to_submit API for submit button
- Modified cli.py: Use continue_to_submit instead of admin_submit
- Updated config.yaml.example: Add auto_submit configuration
- Updated CHANGES.md: Document v2.1.0 changes
- Updated README.md: Update documentation for new behavior

Breaking Changes:
- POST /api/jobs/<id>/submit removed (use continue_to_submit)
- POST /admin/jobs/<id>/submit removed
- CLI submit command now uses complete workflow

Benefits:
- All submissions include shelving (code review friendly)
- All submissions go through name_check remediation
- Consistent behavior between auto-resolve and manual rescan
- User experience is predictable and configurable

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -71,6 +71,7 @@ env_init:
 # The auto-resolve thread checks jobs in needs_resolve status and auto-continues
 # to submit when conflicts are cleared (will not interfere with manual operations)
 auto_resolve:
-  enabled: true  # Enable automatic resolve checking
-  interval: 60   # Check interval in seconds
+  enabled: true   # Enable automatic resolve checking
+  interval: 60    # Check interval in seconds
+  auto_submit: true  # Auto-submit when conflicts are cleared (both auto-resolve and manual rescan)
 
