--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,9 +1,12 @@
 p4:
-  port: your-perforce-server:1666
-  user: your_username
-  client: your_client_name
-  password: ''  # SECURITY: Set via environment variable P4PASSWD
-  bin: p4  # or /path/to/p4
+  # P4 Server and Client Configuration
+  # NOTE: Master runs on Windows but Agent runs on Linux
+  # P4CONFIG file cannot be read across machines, so configure here
+  port: srdcp4ps1.amd.com:1677  # P4PORT - Perforce server address
+  client: your_client_name      # P4CLIENT - Your client/workspace name
+  user: your_username           # P4USER - Your username
+  password: ''                  # P4PASSWD - Password (use quotes if contains special chars like !)
+  bin: p4                       # Path to p4 binary (e.g., /tool/pandora64/bin/p4)
 
 # Agent Configuration
 agent:
@@ -20,12 +23,15 @@ ssh:
   # Use key_path or password (key preferred)
   key_path: ~/.ssh/id_rsa
   password: ''  # SECURITY: Set via P4_INTEG_SSH_PASSWORD
+  # Optional: Explicit path to Python interpreter on remote machine
+  # If not set, defaults to 'python3'
+  python_path: /path/to/python3.11
 
 # Workspace Configuration
 workspace:
   root: /path/to/workspace
 
-# Specs & Defaults
+# Specs & Defaults (for UI convenience)
 defaults:
   source: //depot/source/...
   target: //depot/target/...
@@ -36,21 +42,6 @@ specs:
     target: //depot/branch/...
     description: Example integration spec
 
-# Blocklist: patterns or depot paths to block
-blocklist: []
-
-# Test hooks before submit
-test_hook:
-  command: ''
-  args: []
-
-# Submit configuration
-submit:
-  trial: false  # Set to true for trial mode by default
-
-# P4Push password (for prompts)
-p4w_password: ''  # SECURITY: Set via environment variable
-
 # Logging
 logging:
   level: INFO
@@ -60,26 +51,3 @@ logging:
   json: false
 
 data_dir: data
-
-# Maximum number of jobs that can be queued
-max_queue_size: 100
-
-# Auto-cleanup on error: revert files and delete changelist/shelf when job fails
-auto_cleanup_on_error: true
-
-# Environment initialization (customize for your environment)
-env_init:
-  enabled: true  # Set to false to skip environment initialization
-  init_script: /proj/verif_release_ro/cbwa_initscript/current/cbwa_init.bash
-  bootenv_cmd: bootenv
-  name_check_tool: /tool/aticad/1.0/src/perforce/name_check_file_list
-
-# Auto-resolve configuration
-auto_resolve:
-  enabled: true      # Enable automatic resolve checking
-  interval: 60       # Check interval in seconds
-  auto_submit: true  # Auto-submit when conflicts cleared
-
-# Features
-features:
-  advanced_ui: true
